login auth testing

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^4.0.0
   cloud_firestore: ^6.0.0
+  firebase_auth: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +51,8 @@ dev_dependencies:
   
   # Testing dependencies for Firebase
   fake_cloud_firestore: ^4.0.0
+  firebase_auth_mocks: ^0.15.0
+  mock_exceptions: ^0.8.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
